added home component

--- a/ProiectASPNET/ProiectASPNET/ClientApp/src/app/app.component.html
+++ b/ProiectASPNET/ProiectASPNET/ClientApp/src/app/app.component.html
@@ -1,6 +1,8 @@
 <body>
-  <app-nav-menu></app-nav-menu>
-  <div class="container">
+  <!-- <app-nav-menu></app-nav-menu> -->
+  <!-- <div class="container">
     <router-outlet></router-outlet>
-  </div>
+  </div> -->
+  <app-home-component>
+  </app-home-component>
 </body>
