--- a/ProiectASPNET/ProiectASPNET/ClientApp/src/styles.css
+++ b/ProiectASPNET/ProiectASPNET/ClientApp/src/styles.css
@@ -14,3 +14,9 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+body{
+  color: rgb(0, 0, 0);
+  background-color: #98badd;
+  border-color: #1861ac;
+}
