added navbar component

--- a/ProiectASPNET/ProiectASPNET/ClientApp/src/app/app.component.html
+++ b/ProiectASPNET/ProiectASPNET/ClientApp/src/app/app.component.html
@@ -3,6 +3,5 @@
   <!-- <div class="container">
     <router-outlet></router-outlet>
   </div> -->
-  <app-home-component>
-  </app-home-component>
+  <app-navbar></app-navbar>
 </body>
