--- a/ProiectASPNET/ProiectASPNET/ClientApp/src/styles.css
+++ b/ProiectASPNET/ProiectASPNET/ClientApp/src/styles.css
@@ -1,11 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
 
-code {
+/* code {
   color: #e01a76;
 }
 
@@ -13,7 +10,7 @@ code {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
-}
+} */
 
 body{
   color: rgb(0, 0, 0);
