--- a/ProiectASPNET/ProiectASPNET/ClientApp/src/app/components/navbar/navbar.component.html
+++ b/ProiectASPNET/ProiectASPNET/ClientApp/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,12 @@
                     <a [routerLink]="['books']" routerLinkActive="active">Books</a>
                 </li>   
                 <li class="option">
+                    <a [routerLink]="['authors']" routerLinkActive="active">Authors</a>
+                </li>
+                <li class="option">
+                    <a [routerLink]="['leaderboard']" routerLinkActive="active">Leaderboard</a>
+                </li>
+                <li class="option">
                     <a [routerLink]="['login']" routerLinkActive="active" >Login</a>
                 </li>
                 
