--- a/ProiectASPNET/ProiectASPNET/ClientApp/src/app/components/navbar/navbar.component.css
+++ b/ProiectASPNET/ProiectASPNET/ClientApp/src/app/components/navbar/navbar.component.css
@@ -44,6 +44,7 @@
     text-decoration: none;
     width: 100%;
     height: 100%;
+    display: block;
 }
 
 #navbar li:hover{
@@ -51,4 +52,17 @@
     transition: 0.5s;
     
 }
+
+li.option {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  
+  li.option a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  
 
