--- a/ProiectASPNET/ProiectASPNET/ClientApp/src/app/components/home-component/home-component.component.html
+++ b/ProiectASPNET/ProiectASPNET/ClientApp/src/app/components/home-component/home-component.component.html
@@ -23,6 +23,7 @@
             <p>Editura: {{books[index].publisher}}</p>
             <p>Gen: {{books[index].genre}}</p>
             <p>Nr. pagini: {{books[index].numberOfPages}}</p>
+            <button (click)="goToBook(books[index].id)">Link</button>
 
         </li>
     </ul>
