--- a/ProiectASPNET/ProiectASPNET/ClientApp/src/app/components/book/book.component.html
+++ b/ProiectASPNET/ProiectASPNET/ClientApp/src/app/components/book/book.component.html
@@ -61,6 +61,10 @@
                 <h4>{{review.headLine}}</h4>
                 <p>{{review.reviewText}}</p>
                 <p>Rating: {{review.rating}}</p>
+                <div id="deleteReviewDiv" *ngIf="review.userId == userId">
+                  <label for="deleteReviewButton" id="deleteReviewButton"></label>
+                  <button id="deleteReviewButton" (click)="deleteReview(review.id)"><i class="fa-solid fa-trash"></i></button>
+                </div>
             </li>
         </ul>
         
@@ -68,11 +72,15 @@
     <h2>Citate</h2>
     <div id="quotes">
         <ul>
-            <li *ngFor="let quote of book[0].quotes">
-                <h4>{{quote.username}}</h4>
-                <p>"{{quote.text}}"</p>
-                <p *ngIf="quote.notes != ''">Note personale: {{quote.notes}}</p>
-            </li>
+          <li *ngFor="let quote of book[0].quotes">
+            <h4>{{quote.username}}</h4>
+            <p>"{{quote.text}}"</p>
+            <p *ngIf="quote.notes != ''">Note personale: {{quote.notes}}</p>
+            <div id="deleteQuoteDiv" *ngIf="quote.userId == userId">
+              <label for="deleteQuoteButton" id="deleteQuoteButton"><i class="fa-solid fa-trash"></i></label>
+              <button id="deleteQuoteButton" (click)="deleteQuote(quote.id)"><i class="fa-solid fa-trash"></i></button>
+            </div>
+          </li>
         </ul>
     </div>
 
