--- a/ProiectASPNET/ProiectASPNET/ClientApp/src/app/components/book/book.component.html
+++ b/ProiectASPNET/ProiectASPNET/ClientApp/src/app/components/book/book.component.html
@@ -77,7 +77,7 @@
             <p>"{{quote.text}}"</p>
             <p *ngIf="quote.notes != ''">Note personale: {{quote.notes}}</p>
             <div id="deleteQuoteDiv" *ngIf="quote.userId == userId">
-              <label for="deleteQuoteButton" id="deleteQuoteButton"><i class="fa-solid fa-trash"></i></label>
+              <label for="deleteQuoteButton" id="deleteQuoteButton"></label>
               <button id="deleteQuoteButton" (click)="deleteQuote(quote.id)"><i class="fa-solid fa-trash"></i></button>
             </div>
           </li>
